--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,7 +9,7 @@ atomic_refcell = "0.1.10"
 async-stream = "0.3"
 bytes = "1.0"
 futures01 = { package = "futures", version = "0.1.31" }
-futures = { version = "0.3.4", features = ["compat"] }
+futures = "0.3"
 graph = { path = "../graph" }
 # This dependency is temporary. The multiblockchain refactoring is not
 # finished as long as this dependency exists
@@ -33,7 +33,5 @@ anyhow = "1.0"
 [dev-dependencies]
 tower-test = { git = "https://github.com/tower-rs/tower.git" }
 ipfs-api-backend-hyper = "0.6"
-ipfs-api = { version = "0.17.0", features = [
-    "with-hyper-rustls",
-], default-features = false }
+ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"], default-features = false }
 uuid = { version = "1.3.2", features = ["v4"] }
