--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0"
 assert-json-diff = "2.0.2"
 async-stream = "0.3.5"
 bollard = "0.10"
-futures = { version = "0.3", features = ["compat"] }
+futures = "0.3"
 graph = { path = "../graph" }
 graph-chain-ethereum = { path = "../chain/ethereum" }
 graph-node = { path = "../node" }
