--- a/tests/runner-tests/file-data-sources/subgraph.yaml
+++ b/tests/runner-tests/file-data-sources/subgraph.yaml
@@ -24,6 +24,26 @@ dataSources:
           handler: handleTestEvent
       file: ./src/mapping.ts
 templates:
+  - kind: ethereum/contract
+    name: OnChainDataSource
+    network: test
+    source:
+      abi: Contract
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - Gravatar
+      abis:
+        - name: Contract
+          file: ./abis/Contract.abi
+      blockHandlers:
+        - handler: handleBlock
+      eventHandlers:
+        - event: TestEvent(string)
+          handler: handleTestEvent
+      file: ./src/mapping.ts
   - kind: file/ipfs
     name: File
     mapping:
@@ -77,7 +97,7 @@ templates:
       handler: spawnTestHandler
       file: ./src/mapping.ts
   - kind: file/ipfs
-    name: SpawnedTestHandler
+    name: OffChainDataSource
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
