--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -26,7 +26,7 @@ graphql-parser = "0.4.0"
 lazy_static = "1.4.0"
 num-bigint = { version = "^0.2.6", features = ["serde"] }
 num_cpus = "1.16.0"
-num-traits = "0.2.16"
+num-traits = "=0.2.16"
 rand = "0.8.4"
 regex = "1.5.4"
 semver = { version = "1.0.18", features = ["serde"] }
@@ -36,8 +36,11 @@ serde_json = { version = "1.0", features = ["arbitrary_precision"] }
 serde_regex = "1.1.0"
 serde_yaml = "0.9.21"
 slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
-stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
-stable-hash = { version = "0.4.2" }
+# TODO: This should be reverted to the latest version once it's published
+# stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
+# stable-hash = { version = "0.4.2" }
+stable-hash = { git = "https://github.com/graphprotocol/stable-hash", branch = "main"}
+stable-hash_legacy = { git = "https://github.com/graphprotocol/stable-hash", branch = "old", package = "stable-hash" }
 strum = "0.21.0"
 strum_macros = "0.25.2"
 slog-async = "2.5.0"
