--- a/graphql/Cargo.toml
+++ b/graphql/Cargo.toml
@@ -11,8 +11,8 @@ graphql-tools = "0.2.1"
 indexmap = "2.0"
 Inflector = "0.11.3"
 lazy_static = "1.2.0"
-stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
-stable-hash = { version = "0.4.2" }
+stable-hash = { git = "https://github.com/graphprotocol/stable-hash", branch = "main"}
+stable-hash_legacy = { git = "https://github.com/graphprotocol/stable-hash", branch = "old", package = "stable-hash" }
 defer = "0.1"
 parking_lot = "0.12"
 anyhow = "1.0"
