--- a/store/postgres/Cargo.toml
+++ b/store/postgres/Cargo.toml
@@ -30,7 +30,7 @@ postgres-openssl = "0.5.0"
 rand = "0.8.4"
 serde = "1.0"
 uuid = { version = "1.4.1", features = ["v4"] }
-stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
+stable-hash_legacy = { git = "https://github.com/graphprotocol/stable-hash", branch = "old", package = "stable-hash" }
 diesel_derives = "1.4.1"
 anyhow = "1.0.75"
 git-testament = "0.2.4"
