--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -97,9 +97,9 @@ EXPOSE 8020
 EXPOSE 8030
 
 RUN apt-get update \
-    && apt-get install -y libpq-dev ca-certificates netcat \
+    && apt-get install -y libpq-dev ca-certificates netcat whois \
     && useradd -m graphuser \
-    && echo "graphuser:graphuser" | chpasswd
+    && echo "graphuser:$(mkpasswd -m sha-512 -s somesalt4325)" | chpasswd
 
 ADD docker/wait_for docker/start /usr/local/bin/
 COPY --from=graph-node-build /usr/local/bin/graph-node /usr/local/bin/graphman /usr/local/bin/
