--- a/chain/near/Cargo.toml
+++ b/chain/near/Cargo.toml
@@ -12,6 +12,7 @@ graph = { path = "../../graph" }
 prost = { workspace = true }
 prost-types = { workspace = true }
 serde = "1.0"
+anyhow = "1"
 
 graph-runtime-wasm = { path = "../../runtime/wasm" }
 graph-runtime-derive = { path = "../../runtime/derive" }
