--- a/chain/starknet/Cargo.toml
+++ b/chain/starknet/Cargo.toml
@@ -12,7 +12,8 @@ hex = { version = "0.4.3", features = ["serde"] }
 prost = { workspace = true }
 prost-types = { workspace = true }
 serde = "1.0"
-starknet-core = "0.6.0"
+sha3 = "0.10.8"
+starknet-ff = "0.3.4"
 
 graph-runtime-wasm = { path = "../../runtime/wasm" }
 graph-runtime-derive = { path = "../../runtime/derive" }
