--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -23,6 +23,7 @@ hex = "0.4.3"
 http = "0.2.3"
 futures = "0.1.21"
 graphql-parser = "0.4.0"
+humantime = "2.1.0"
 lazy_static = "1.4.0"
 num-bigint = { version = "^0.2.6", features = ["serde"] }
 num_cpus = "1.16.0"
