--- a/tests/runner-tests/data-source-revert/grafted.yaml
+++ b/tests/runner-tests/data-source-revert/grafted.yaml
@@ -4,8 +4,9 @@ features:
 schema:
   file: ./schema.graphql
 graft:
-  # Must match the id from building `subgraph.yaml`
-  base: QmR3TAJuimii5huAswW7uqSzJfsR4GmAxwfawK2DwF3YFh
+  # This can be overwritten by `updateAndDeploy.js`.
+  # Please commit this file when this happens.
+  base: QmcAL39QSKZvRssr2ToCJrav7XK9ggajxvBR7M1NNUCqdh
   block: 3
 dataSources:
   - kind: ethereum/contract
